--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,16 +1,16 @@
 architect:
-  - kerelape
+  - zehaoj
 
 merge:
   commanders:
-    - kerelape
+    - zehaoj
 
   script: |
     ./gradlew test
 
 release:
   commanders:
-    - kerelape
+    - zehaoj
 
   script: |
     ./gradlew test
